Added bootstrap, css, and comments to code

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,72 +1,89 @@
-<h1>Eat Dat Burger</h1>
+<div class="container text-center">
+    <h1>Eat Dat Burger</h1>
+    <img src="/assets/img/burger.png"/>
 
-<h2>Add A Burger</h2>
+    <h2>Add A Burger</h2>
 
-<form class="create-burger">
-    <textarea id="burger_name">
+        <div class="col-sm-12">
+            <div class="form-group">
+                <form class="create-burger">
+                    <textarea class="form-control" id="burger_name"></textarea>
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
+            </div>
+        </div>
 
-    </textarea>
-    <button type="submit">Submit</button>
-</form c>
 
-<div class="burgers">
-    <h3>Eat These Burgies!!</h3>
-    <ul>
-        {{#each burgers}}
-            {{#unless devoured}}
-            <li>
-                {{burger_name}}
-                <button class="devour" data-id="{{id}}">Devour</button>
-            </li>
-        {{/unless}}
-        {{/each}}
-    </ul>
-</div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="burgers">
+                <h3>Eat These Burgies!!</h3>
+                <ul class="list-group">
+                    {{#each burgers}}
+                    {{#unless devoured}}
+                    <li class="list-group-item list-group-item-action">
+                        {{burger_name}}
+                        <button class="devour btn btn-success" data-id="{{id}}">Devour</button>
+                    </li>
+                    {{/unless}}
+                    {{/each}}
+                </ul>
+            </div>
+        </div>
 
-<div class="devoured">
-    <h3>Burger Graveyard</h3>
-    <ul>
-        {{#each burgers}}
-            {{#if devoured}}
-            <li>
-                {{burger_name}}
-            </li>
-        {{/if}}
-        {{/each}}
-    </ul>
+        <div class="col-sm-6">
+
+            <div class="devoured">
+                <h3>Burger Graveyard</h3>
+                <ul "list-group">
+                    {{#each burgers}}
+                    {{#if devoured}}
+                    <li class="list-group-item list-group-item-action list-group-item-dark">
+                        {{burger_name}}
+                    </li>
+                    {{/if}}
+                    {{/each}}
+                </ul>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <script>
-    $(function() {
-        console.log("hellO");
-    $(".create-burger").on("submit", function (event) {
-        event.preventDefault();
+    $(function () {
+        
+        // Click functionality to add a new burger, we use an ajax request to send it to the back-end
+        $(".create-burger").on("submit", function (event) {
+            event.preventDefault();
 
-        let newBurger = {
-            name: $("#burger_name").val().trim()
-        };
+            let newBurger = {
+                name: $("#burger_name").val().trim()
+            };
 
-        $.ajax("/api/burgers", {
-            type: "POST",
-            data: newBurger
-        }).then(function() {
-            location.reload();
+            $.ajax("/api/burgers", {
+                type: "POST",
+                data: newBurger
+            }).then(function () {
+                location.reload();
+            });
         });
+        
+        // Click functionality to update a burger, also uses an ajax request to the back-end
+        $(".devour").on("click", function (event) {
+            let id = $(this).data("id");
+            console.log(id);
+            let newState = {
+                devoured: true
+            }
+
+            $.ajax("/api/burgers/" + id, {
+                type: "PUT",
+                data: newState
+            }).then(function () {
+                location.reload();
+            })
+        });
+
     });
-
-    $(".devour").on("click", function (event) {
-        let id = $(this).data("id");
-        let newState = {
-            devoured: true
-        }
-
-        $.ajax("/api/burgers/" + id, {
-            type: "PUT",
-            data: newState
-        }).then(function() {
-            location.reload();
-        })
-    })
-    
-})
 </script>
